# Subman

./: .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  subman.db
app/: Untitled  auth.py  main.py  models.py  seedscript.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
frontend/: app.py
scripts/: demo.sh  refresh.py
tests/: test_auth.py  test_main.py
